# neuroglyph-forge

./: .env.example  .gitignore  AGENTS.md  AGENT_GOAL.md  LICENSE  README.md  pyproject.toml
checkpoints/: eval_hand.json  exported_hand.meta.json
configs/: epocx_256hz.yaml  hermes-mcp-snippet.yaml  train_hand.yaml
data/: adaptive_brief.md  adaptive_queue.json  brain_art_bundle.json  brain_art_prompt.txt  catalog.json  eval_hand.json  gear_test_report.json  smoke_report.json  swarm_report.json  verify_report.json
docs/: ADAPTIVE_ORCHESTRATION.md  BRAINMAP.md  COMFY_IMAGE2_PROMPT.md  COMFY_MCP.md  CORTEX_SETUP.md  DATASET.md  ENGLISH_DATA_PATH.md  FIRST_SESSION_PROTOCOL.md  HF_UPLOAD.md  LOCAL_GPU.md  MINDBOT_INTEGRATION.md  MODAL_TRAINING.md  ROADMAP.md  SYSTEM.md  TRAINABLE_DATASETS.md  UNREAL_SETUP.md  WHAT_THIS_DOES_FOR_YOU.md  brainmap.html  index.html
neuroglyph_agent/: adaptive_engine.py  hermes_bridge.py  hermes_stdio_mcp.py  live_decoder.py  mcp_server.py  mindbot_bus.py  policy.py  situations.py
neuroglyph_cloud/: modal_train.py
neuroglyph_core/: __init__.py
neuroglyph_data/: convert_emotiv.py  make_epochs.py  make_epochs_cli.py  public_datasets.py  schema.py  splits.py  synthetic.py
neuroglyph_models/: __init__.py  adapters.py  eegnet.py  heads.py  tiny_b2q.py
neuroglyph_preprocess/: mne_pipeline.py
neuroglyph_recorder/: cortex_client.py  eeg_writer.py  keylogger.py  marker_sync.py  prompts.py  session_runner.py
neuroglyph_train/: engine.py  evaluate.py  export_model.py  finetune_subject.py  train.py
neuroglyph_unreal/: ue_actions.py  (+1 more)
(+51 files in other folders)
